--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "minimum-stability": "dev",
     "require": {},
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        },
         "laravel": {
             "providers": [
                 "Suta007\\Breezestrap\\BreezestrapServiceProvider"
